src/main/java/com/example/login_jwt/global/error/exception/InvalidGroupException.java
package com.example.login_jwt.global.error.exception;

public abstract class InvalidGroupException extends RuntimeException{
    public InvalidGroupException(String message) {
        super(message);
    }
}
